# leptos_i18n

./: .gitignore  01_introduction.html  02_getting_started.html  06_features.html  404.html  Cargo.toml  LICENSE.md  README.md  appendix_custom_formatter  appendix_custom_formatter.html  appendix_i18n_ally.html  index.html  print.html  searchindex.js  searchindex.json
declare/: 01_key_value.html  02_interpolation.html  03_plurals.html  04_ranges.html  04_subkeys.html  05_foreign_keys.html  05_subkeys.html  06_foreign_keys.html  06_mix_kinds.html  07_formatters.html  07_mix_kinds.html  08_formatters.html  index.html
examples/csr/counter_icu_datagen/: Cargo.toml  build.rs  package-lock.json  package.json
examples/csr/counter_icu_datagen/e2e/: example.spec.ts
examples/csr/counter_icu_datagen/locales/: en.json  fr.json
examples/csr/counter_icu_datagen/src/: main.rs
examples/csr/counter_ranges/: Cargo.toml  README.md
examples/csr/counter_ranges/src/: app.rs  main.rs
examples/csr/interpolation/: Cargo.toml  package.json
examples/csr/interpolation/e2e/: example.spec.ts
examples/csr/interpolation/locales/: en.json  fr.json
examples/csr/interpolation/src/: app.rs  main.rs
examples/csr/reverse_lookup/: .gitignore  Cargo.toml  README.md  build.rs
examples/csr/reverse_lookup/locales/: en.json  es.json  fr.json  zh.json
examples/csr/reverse_lookup/src/: app.rs
examples/csr/routing_csr/: .gitignore  Cargo.toml  build.rs  package.json
examples/csr/routing_csr/e2e/: example.spec.ts
examples/csr/routing_csr/locales/: en.json  fr.json
examples/csr/routing_csr/src/: app.rs
examples/csr/subcontext/: Cargo.toml  package-lock.json  package.json
examples/csr/subcontext/e2e/: example.spec.ts
examples/csr/subcontext/locales/: en.json  fr.json
examples/csr/subcontext/src/: app.rs
examples/dynamic_load/csr_counter/: Cargo.toml  README.md  build.rs  index.html  package-lock.json  package.json
examples/dynamic_load/csr_counter/src/: app.rs  main.rs
examples/dynamic_load/hello_world_axum/: Cargo.toml  package-lock.json
examples/dynamic_load/hello_world_axum/src/: app.rs  fileserv.rs  lib.rs  main.rs
examples/ssr/workspace/client/: Cargo.toml  build.rs
examples/ssr/workspace/client/locales/: en.json
examples/ssr/workspace/client/src/: app.rs  lib.rs
examples/ssr/workspace/server/: Cargo.toml
examples/ssr/workspace/server/src/: main.rs
examples/workspace/: Cargo.toml  README.md  package.json
examples/workspace/client/: Cargo.toml
examples/workspace/client/src/: app.rs
examples/workspace/counter/: Cargo.toml  README.md
examples/workspace/counter/src/: app.rs  lib.rs  main.rs
examples/workspace/server/src/: main.rs
examples/yaml/: Cargo.toml  README.md  package-lock.json  package.json
examples/yaml/locales/: fr.yaml
examples/yaml/src/: app.rs  main.rs
infos/: 01_locale_resol.html  index.html
leptos_i18n/: Cargo.toml
leptos_i18n/src/: accepted_lang.rs  build.rs  context.rs  display.rs  fetch_locale.rs  fetch_translations.rs  langid.rs  lib.rs  locale.rs  locale_traits.rs  macro_helpers.rs  macros.rs  reverse_lookup.rs  routing.rs  scoped.rs  scopes.rs  static_lock.rs  t_macro.rs  view.rs
leptos_i18n/src/macro_helpers/: interpol_args.rs  interpol_check.rs  mod.rs  scope.rs
leptos_i18n/src/macro_helpers/formatting/: currency.rs  date.rs  datetime.rs  list.rs  mod.rs  nums.rs  time.rs
leptos_i18n/src/private/: macro_utils.rs  mod.rs
leptos_i18n/src/server/: actix.rs  axum.rs  mod.rs
leptos_i18n_build/: Cargo.toml
leptos_i18n_build/src/: datakey.rs  datamarker.rs  lib.rs  options.rs
leptos_i18n_codegen/: Cargo.toml
leptos_i18n_codegen/src/: lib.rs
leptos_i18n_codegen/src/load_locales/: interpolate.rs  locale.rs  mod.rs  parsed_value.rs  plurals.rs  ranges.rs  tracking.rs  warning.rs
leptos_i18n_codegen/src/utils/: formatter.rs  mod.rs
leptos_i18n_macro/: Cargo.toml
leptos_i18n_macro/src/: cfg_file.rs  data_provider.rs  error.rs  interpolate.rs  key.rs  lib.rs  load_locales.rs  locale.rs  parsed_value.rs  plural.rs  scoped.rs  value_kind.rs
leptos_i18n_macro/src/load_locales/: cfg_file.rs  declare_locales.rs  error.rs  interpolate.rs  key.rs  locale.rs  mod.rs  parsed_value.rs  plural.rs  plurals.rs  ranges.rs  tracking.rs  warning.rs
leptos_i18n_macro/src/t_format/: mod.rs  parsed_input.rs
leptos_i18n_macro/src/t_macro/: error.rs  interpolate.rs  mod.rs  parsed_input.rs
leptos_i18n_macro/src/t_plural/: mod.rs  parsed_input.rs
leptos_i18n_macro/src/utils/: formatter.rs  key.rs  mod.rs  scoped.rs
leptos_i18n_parser/: Cargo.toml
leptos_i18n_parser/src/: lib.rs
leptos_i18n_parser/src/formatters/: currency.rs  datetime.rs  list.rs  mod.rs  nums.rs
leptos_i18n_parser/src/parse_locales/: cfg_file.rs  error.rs  locale.rs  mod.rs  options.rs  parsed_value.rs  plurals.rs  ranges.rs  warning.rs
leptos_i18n_parser/src/utils/: formatter.rs  key.rs  mod.rs
leptos_i18n_router/: Cargo.toml
leptos_i18n_router/src/: components.rs  lib.rs  routing.rs
reduce_size/: 01_datagen.html  02_dynamic_load.html  index.html
setting_up/: 01_configuration.html  02_file_structure.html  03_namespaces.html  04_inheritance.html  (+1 more)
tests/json/: Cargo.toml  README.md  build.rs
tests/json/locales/: en.json  fr.json
tests/json/src/: components.rs  defaulted.rs  foreign.rs  formatting.rs  lib.rs  plurals.rs  ranges.rs  scoped.rs  subkeys.rs  t_format.rs  t_plural.rs  tests.rs
tests/json5/: Cargo.toml  README.md  build.rs
tests/json5/locales/: en.json5  fr.json5
tests/json5/src/: defaulted.rs  lib.rs  ranges.rs  subkeys.rs  tests.rs
tests/namespaces/: Cargo.toml  README.md  build.rs  i18n.json
tests/namespaces/locales/en/: first_namespace.json  second_namespace.json
tests/namespaces/locales/fr/: first_namespace.json  second_namespace.json
tests/namespaces/src/: app.rs  first_ns.rs  i18n.rs  lib.rs  scoped.rs  second_ns.rs  tests.rs
tests/yaml/: .gitignore  Cargo.toml  build.rs
tests/yaml/locales/: en.yaml  fr.yaml  fr.yml
tests/yaml/src/: defaulted.rs  lib.rs  plurals.rs  ranges.rs  subkeys.rs  tests.rs
(+294 files in other folders)
