[workspace]
resolver = "2"
members = [
  "leptos_i18n",
  "leptos_i18n_macro",
  "leptos_i18n_parser",
  "leptos_i18n_build",
  "tests/json",
  "tests/common",
  "tests/namespaces",
  "leptos_i18n_router",
]
exclude = ["examples", "tests"]

[workspace.package]
version = "0.5.11"

[workspace.dependencies]
# pin macro and parser version, those don't follow semver internally so a version missmatch with the main crate can cause problems.
leptos_i18n_macro = { path = "./leptos_i18n_macro", default-features = false, version = "=0.5.11" }
leptos_i18n_parser = { path = "./leptos_i18n_parser", default-features = false, version = "=0.5.11" }
leptos_i18n = { path = "./leptos_i18n", default-features = false, version = "0.5.11" }
leptos_i18n_router = { path = "./leptos_i18n_router", version = "0.5.11" }

# leptos
leptos = { version = "0.8.0-rc1", default-features = false }
leptos_router = { version = "0.8.0-rc1", default-features = false }
leptos_meta = { version = "0.8.0-rc1", default-features = false }

# icu
icu = { version = "2.0.0-beta2", default-features = false }
icu_locale = { version = "2.0.0-beta2", default-features = false }
icu_provider = { version = "2.0.0-beta2", default-features = false }
fixed_decimal = { version = "0.7.0", default-features = false }
icu_provider_export = { version = "2.0.0-beta2", default-features = false }
icu_provider_source = { version = "2.0.0-beta2", default-features = false }
icu_plurals = { version = "2.0.0-beta2", default-features = false }
icu_datetime = { version = "2.0.0-beta2", default-features = false }
icu_calendar = { version = "2.0.0-beta2", default-features = false }
icu_list = { version = "2.0.0-beta2", default-features = false }
icu_decimal = { version = "2.0.0-beta2", default-features = false }
icu_experimental = { version = "0.3.0-beta2", default-features = false }
tinystr = "0.8.1"

# internal use
tests_common = { path = "./tests/common", version = "0.1.0" }
