[package]
name = "leptos_i18n"
version = { workspace = true }
edition = "2021"
authors = ["Baptiste de Montangon"]
license = "MIT"
repository = "https://github.com/Baptistemontan/leptos_i18n"
description = "Translations integration helper for the Leptos web framework"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos_i18n_macro = { workspace = true }
leptos = { workspace = true }
leptos_meta = { version = "0.7.0-gamma2" }
leptos_router = { version = "0.7.0-gamma2" }
leptos-use = { version = "0.14.0-gamma1", default-features = false, features = [
    "use_locales",
    "use_cookie",
] }
codee = "0.2"
# icu = { version = "1.5", features = ["sync"] }
icu_locid = { version = "1.5" }
icu_plurals = { version = "1.5", optional = true }
icu_provider = { version = "1.5", optional = true, features = ["sync"] }
icu_datetime = { version = "1.5", optional = true }
icu_calendar = { version = "1.5", optional = true }
icu_list = { version = "1.5", optional = true }
icu_decimal = { version = "1.5", optional = true }
typed-builder = "0.19"
fixed_decimal = { version = "0.5", optional = true, features = ["ryu"] }
writeable = "0.5"
serde = "1.0"
wasm-bindgen = "0.2.93"
default-struct-builder = "0.5"

tower = { version = "0.4.13", default-features = false, optional = true, features = [
    "util",
] }

[features]
default = ["cookie", "json_files"]
plurals = ["dep:icu_plurals", "dep:icu_provider", "leptos_i18n_macro/plurals"]
format_datetime = [
    "dep:icu_datetime",
    "dep:icu_calendar",
    "leptos_i18n_macro/format_datetime",
]
format_list = ["dep:icu_list", "leptos_i18n_macro/format_list"]
format_nums = [
    "dep:icu_decimal",
    "dep:fixed_decimal",
    "leptos_i18n_macro/format_nums",
]
actix = ["ssr", "leptos-use/actix"]
axum = ["ssr", "leptos-use/axum", "dep:tower"]
hydrate = ["leptos/hydrate"]
csr = ["leptos/csr"]
cookie = []
experimental-islands = [
    "leptos/experimental-islands",
    "leptos_i18n_macro/experimental-islands",
]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos-use/ssr", "leptos_router/ssr"]
nightly = ["leptos/nightly", "leptos_i18n_macro/nightly"]


# macro features
show_keys_only = ["leptos_i18n_macro/show_keys_only"]
suppress_key_warnings = ["leptos_i18n_macro/suppress_key_warnings"]
json_files = ["leptos_i18n_macro/json_files"]
yaml_files = ["leptos_i18n_macro/yaml_files"]
interpolate_display = ["leptos_i18n_macro/interpolate_display"]
track_locale_files = ["leptos_i18n_macro/track_locale_files"]


[package.metadata.cargo-all-features]
denylist = [
    # Always exclude:
    "ssr",        # Should always be enabled via a server integration rather than directly
    "yaml_files", # See leptos_i18n_macro manifest to see why "yaml_files" and other formats are in deny list and JSON is always included
    "nightly",    # Requires a nightly toolchain

    # Only passed through to `leptos_i18n_macros`, exclude to save time:
    "serde",
    "suppress_key_warnings",
    "track_locale_files",
    "show_keys_only",
]
skip_feature_sets = [
    # Axum and Actix features are incompatible with each other
    [
        "axum",
        "actix",
    ],

    # Only one of `hydrate`, (`axum`, `actix`), `csr` should be enabled in a single crate, exclude to save time:
    [
        "actix",
        "hydrate",
    ],
    [
        "axum",
        "hydrate",
    ],
    [
        "axum",
        "actix",
    ],
    [
        "actix",
        "csr",
    ],
    [
        "axum",
        "csr",
    ],
    [
        "hydrate",
        "csr",
    ],
]
# see leptos_i18n_macro manifest to see why "yaml_files" and other formats are in deny list and JSON is always included
always_include_features = ["json_files"]
