[package]
name = "leptos_i18n"
version = { workspace = true }
edition = "2021"
authors = ["Baptiste de Montangon"]
license = "MIT"
repository = "https://github.com/Baptistemontan/leptos_i18n"
description = "Translations integration helper for the Leptos web framework"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos-use = { version = "0.14.0-rc1", default-features = false, features = [
    "use_locales",
    "use_cookie",
] }
leptos_i18n_macro = { workspace = true }
leptos = { workspace = true }
leptos_meta = { version = "0.7.0-rc1" }
leptos_router = { version = "0.7.0-rc1" }
codee = "0.2"
# icu = { version = "1.5", features = ["sync"] }
icu_locid = { version = "1.5" }
icu_provider = { version = "1.5", optional = true, features = ["sync"] }
icu_plurals = { version = "1.5", optional = true, default-features = false }
icu_datetime = { version = "1.5", optional = true }
icu_calendar = { version = "1.5", optional = true }
icu_list = { version = "1.5", optional = true }
icu_decimal = { version = "1.5", optional = true }
typed-builder = "0.20"
fixed_decimal = { version = "0.5", optional = true, features = ["ryu"] }
writeable = "0.5"
serde = "1.0"
wasm-bindgen = "0.2.93"
async-once-cell = { version = "0.5.3", optional = true }
js-sys = { version = "0.3.70", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
futures = { version = "0.3.30", optional = true }
noop-waker = { version = "0.1.0", optional = true }
default-struct-builder = "0.5"

# FIXME
leptos_actix = { version = "0.7.0-rc1", optional = true }
leptos_axum = { version = "0.7.0-rc1", optional = true }

[features]
default = ["cookie", "json_files", "icu_compiled_data"]
cookie = []
icu_compiled_data = [
    "icu_plurals?/compiled_data",
    "icu_datetime?/compiled_data",
    "icu_calendar?/compiled_data",
    "icu_list?/compiled_data",
    "icu_decimal?/compiled_data",
    "leptos_i18n_macro/icu_compiled_data",
]
plurals = ["dep:icu_plurals", "dep:icu_provider", "leptos_i18n_macro/plurals"]
format_datetime = [
    "dep:icu_datetime",
    "dep:icu_calendar",
    "dep:icu_provider",
    "leptos_i18n_macro/format_datetime",
]
format_list = [
    "dep:icu_list",
    "dep:icu_provider",
    "leptos_i18n_macro/format_list",
]
format_nums = [
    "dep:icu_decimal",
    "dep:fixed_decimal",
    "dep:icu_provider",
    "leptos_i18n_macro/format_nums",
]
actix = ["ssr", "leptos-use/actix", "dep:leptos_actix"]
axum = ["ssr", "leptos-use/axum", "dep:leptos_axum"]
hydrate = [
    "leptos/hydrate",
    "leptos_i18n_macro/hydrate",
    "dep:js-sys",
    "dep:serde-wasm-bindgen",
]
csr = ["leptos/csr", "leptos_i18n_macro/csr"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos-use/ssr",
    "leptos_router/ssr",
    "leptos_i18n_macro/ssr",
]
experimental-islands = [
    "leptos/experimental-islands",
    "leptos_i18n_macro/experimental-islands",
]
nightly = ["leptos/nightly", "leptos_i18n_macro/nightly"]

dynamic_load = [
    "leptos_i18n_macro/dynamic_load",
    "dep:async-once-cell",
    "dep:futures",
    "dep:noop-waker",
]


# macro features
show_keys_only = ["leptos_i18n_macro/show_keys_only"]
suppress_key_warnings = ["leptos_i18n_macro/suppress_key_warnings"]
json_files = ["leptos_i18n_macro/json_files"]
json5_files = ["leptos_i18n_macro/json5_files"]
yaml_files = ["leptos_i18n_macro/yaml_files"]
interpolate_display = ["leptos_i18n_macro/interpolate_display"]
track_locale_files = ["leptos_i18n_macro/track_locale_files"]


[package.metadata.cargo-all-features]
denylist = [
    # Always exclude:
    "ssr",         # Should always be enabled via a server integration rather than directly
    "yaml_files",  # See leptos_i18n_macro manifest to see why "yaml_files" and other formats are in deny list and JSON is always included
    "json5_files",

    # Only passed through to `leptos_i18n_macros`, exclude to save time:
    "serde",
    "suppress_key_warnings",
    "track_locale_files",
    "show_keys_only",
]
skip_feature_sets = [
    # Axum and Actix features are incompatible with each other
    [
        "axum",
        "actix",
    ],

    # Only one of `hydrate`, (`axum`, `actix`), `csr` should be enabled in a single crate, exclude to save time:
    [
        "actix",
        "hydrate",
    ],
    [
        "axum",
        "hydrate",
    ],
    [
        "axum",
        "actix",
    ],
    [
        "actix",
        "csr",
    ],
    [
        "axum",
        "csr",
    ],
    [
        "hydrate",
        "csr",
    ],
    [
        "dynamic_load",
        "csr",
    ],
]
# see leptos_i18n_macro manifest to see why "yaml_files" and other formats are in deny list and JSON is always included
always_include_features = [
    "json_files",
    "icu_compiled_data",
    "plurals",
    "format_datetime",
    "format_list",
    "format_nums",
]
