[package]
name = "leptos_i18n_build"
version = { workspace = true }
edition = "2021"
authors = ["Baptiste de Montangon"]
license = "MIT"
repository = "https://github.com/Baptistemontan/leptos_i18n"
description = "build.rs utilities for the leptos_i18n crate"
readme = "../README.md"

[dependencies]
leptos_i18n_parser = { workspace = true }
leptos_i18n_codegen = { workspace = true }

icu_provider_export = { workspace = true, features = [
  "baked_exporter",
  "rayon",
] }
icu_provider_source = { workspace = true, features = [
  "networking",
  "use_wasm",
  "experimental",
] }
icu = { workspace = true, features = ["experimental"] }
icu_provider = { workspace = true }
icu_locale = { workspace = true }


prettyplease = { version = "0.2", features = ["verbatim"], optional = true }
syn = { version = "2.0", optional = true }

[features]
default = ["json_files"]
json_files = ["leptos_i18n_parser/json_files"]
yaml_files = ["leptos_i18n_parser/yaml_files"]
json5_files = ["leptos_i18n_parser/json5_files"]

# This is to format the code after codegen, helpfull for debugging
pretty_print = ["dep:prettyplease", "dep:syn"]
