[package]
name = "leptos_i18n_macro"
version = { workspace = true }
edition = "2021"
authors = ["Baptiste de Montangon"]
license = "MIT"
repository = "https://github.com/Baptistemontan/leptos_i18n"
description = "Macros for the leptos_i18n crate"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
serde = { version = "1", features = ["rc"] }
serde_json = { version = "1" }
proc-macro2 = "1"
quote = "1"
syn = "2.0"
toml = "0.8"
icu_locale = { workspace = true, features = ["compiled_data"] }
fixed_decimal = { workspace = true, features = ["ryu"] }
leptos_i18n_parser = { workspace = true }
tinystr = { workspace = true }
leptos_i18n_codegen = { workspace = true }

[features]
default = []
# nightly = []
islands = ["leptos_i18n_codegen/islands"]
dynamic_load = ["leptos_i18n_codegen/dynamic_load"]
hydrate = ["leptos_i18n_codegen/hydrate"]
csr = ["leptos_i18n_codegen/csr"]
ssr = ["leptos_i18n_codegen/ssr"]
plurals = ["leptos_i18n_parser/plurals", "leptos_i18n_codegen/plurals"]
format_datetime = [
    "leptos_i18n_parser/format_datetime",
    "leptos_i18n_codegen/format_datetime",
]
format_list = [
    "leptos_i18n_parser/format_list",
    "leptos_i18n_codegen/format_list",
]
format_nums = [
    "leptos_i18n_parser/format_nums",
    "leptos_i18n_codegen/format_nums",
]
format_currency = [
    "leptos_i18n_parser/format_currency",
    "format_nums",
    "leptos_i18n_codegen/format_currency",
]
icu_compiled_data = []

[package.metadata.cargo-all-features]
# cargo-all-features don't provide a way to always include one feature in a set, so CI will just do json...
denylist = ["nightly", "yaml_files", "json5_files"]
always_include_features = ["json_files"]
