[package]
name = "leptos_i18n_parser"
version = { workspace = true }
edition = "2021"
authors = ["Baptiste de Montangon"]
license = "MIT"
repository = "https://github.com/Baptistemontan/leptos_i18n"
description = "parser for the leptos_i18n crate"
readme = "../README.md"

[dependencies]
icu_locid = { workspace = true }
icu_plurals = { workspace = true, features = ["compiled_data"] }
serde = { version = "1", features = ["rc"] }
serde_json = { version = "1" }
serde_yaml = { version = "0.9" }
toml = "0.8"
fixed_decimal = { workspace = true, features = ["ryu"] }
json5 = { version = "0.4" }
quote = { version = "1", optional = true }
syn = { version = "2.0", optional = true }
proc-macro2 = { version = "1", optional = true }
tinystr = { workspace = true }

[features]
default = ["json_files"]
quote = ["dep:quote", "dep:syn", "dep:proc-macro2"]
json_files = []
yaml_files = []
json5_files = []
plurals = []
format_datetime = []
format_list = []
format_nums = []
format_currency = ["format_nums"]
suppress_key_warnings = []
