[package]
name = "leptos_i18n_parser"
version = { workspace = true }
edition = "2024"
authors = ["Baptiste de Montangon"]
license = "MIT"
repository = "https://github.com/Baptistemontan/leptos_i18n"
description = "parser for the leptos_i18n crate"
readme = "../README.md"

[dependencies]
icu_provider = { workspace = true, default-features = false }
icu_locale = { workspace = true, default-features = true }
icu_plurals = { workspace = true, features = [
  "compiled_data",
], default-features = false }
serde = { features = ["rc"], workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
serde_yaml = { workspace = true, default-features = true }
toml = { workspace = true, default-features = true }
fixed_decimal = { workspace = true, features = [
  "ryu",
], default-features = false }
json5 = { workspace = true, default-features = true }
quote = { workspace = true, default-features = true }
syn = { workspace = true, default-features = true }
proc-macro2 = { workspace = true, default-features = true }
tinystr = { workspace = true, default-features = false }

[features]
plurals = []
format_datetime = []
format_list = []
format_nums = []
format_currency = ["format_nums"]
