[package]
name = "leptos_i18n_router"
version = { workspace = true }
edition = "2024"
authors = ["Baptiste de Montangon"]
license = "MIT"
repository = "https://github.com/Baptistemontan/leptos_i18n"
description = "Translations integration helper for the Leptos web framework"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos_i18n = { workspace = true }
leptos = { workspace = true, default-features = false }
leptos_router = { workspace = true, default-features = false }

[features]
ssr = ["leptos/ssr", "leptos_router/ssr", "leptos_i18n/ssr"]


[package.metadata.cargo-all-features]
denylist = []
skip_feature_sets = []
always_include_features = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(erase_components)'] }
