[workspace]
resolver = "2"
members = ["client", "server"]

[workspace.dependencies]
leptos_i18n = { path = "../../leptos_i18n" }

[[workspace.metadata.leptos]]
name = "counter"
bin-package = "server"
lib-package = "client"

reload-port = 3001

# watch changes on the locales folder
watch-additional-files = ["client/locales"]
