[workspace]
resolver = "2"
members = ["client", "server"]

[workspace.dependencies]
leptos_i18n = { path = "../../leptos_i18n" }

[[workspace.metadata.leptos]]
name = "counter"
bin-package = "server"

lib-package = "client"
lib-features = ["hydrate"]

reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
end2end-cmd = "npx playwright test"
end2end-dir = "e2e"

# watch changes on the locales folder
watch-additional-files = ["client/locales"]
