[package]
name = "yaml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_i18n = { path = "../../leptos_i18n", default-features = false, features = [
    "debug_interpolations",
    "csr",
    "cookie",
    "yaml_files",
] }
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = { version = "0.1" }
wasm-bindgen = { version = "=0.2.90" }

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "fr"]
