[package]
name = "json"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = "0.6"
common = { path = "../common" }
leptos_i18n = { path = "../../leptos_i18n", features = ["interpolate_display"] }


[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "fr"]
